--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@
 .purple .box-bd ul li {
     background-color: #fff;
 }
-.shengxian ul {
+.shengxian .box-hd ul {
     float: left;
     margin-top: 9px;
     margin-left: 635px;
@@ -191,7 +191,7 @@
 .shengxian ul li a{
     padding: 0 12px;
 }
-.shengxian ul li a:hover {
+.shengxian .box-hd ul li a:hover {
     background-color: #27ba9b;
     color: white;
 }
@@ -204,7 +204,8 @@
     height: 610px;
 }
 .goods-right {
-    float: right;
+    
+    float: left;
     width: 1000px;
     height: 610px;
 }
@@ -212,3 +213,75 @@
     width: 240px;
     height: 610px;
 }
+.goods .goods-right ul li {
+    position: relative;
+    float: left;
+    width: 240px;
+    height: 304px;
+    margin-left: 10px;
+    overflow: hidden;
+    /* background: pink; */
+    transition: all .3s;
+    border: 2px solid transparent;
+}
+.goods .goods-right ul li a{
+    display: block;
+    width: 240px;
+    height: 304px;
+}
+.goods .goods-right ul li:hover {
+    border: 2px solid #27ba9b;
+}
+.goods .goods-right ul li:hover .find {
+    bottom: 0;
+}
+.goods-right ul li img {
+    width: 150px;
+}
+.goods-right .img-box {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+}
+.goods-right li h3 {
+    margin:20px 20px;
+    font-size: 18px;
+    font-weight: 400;
+}
+.goods-right li p {
+    margin-left: 20px;
+    font-size: 20px;
+    color: red;
+}
+.goods-right li p span {
+    font-size: 16px;
+}
+.find {
+    position: absolute;
+    bottom: -87px;
+    left: 0;
+    width: 100%;
+    height: 84px;
+    padding: 19px 55px 0;
+    text-align: center;
+    background: #27ba9b;
+    transition: all 0.5s;
+    color: #fff;
+}
+.find h5 {
+    font-size: 18px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 7px;
+    font-weight: 400;
+}
+.find a p {
+    color: #fff;
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+}
+.goods .goods-right .find a {
+    display: inline;
+}
+
+
